--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:targetApi="m">
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
@@ -29,17 +30,18 @@
 
         <activity android:name="kr.co.partnersclub.IntroActivity"
             android:screenOrientation="portrait"
-            >
+            tools:ignore="LockedOrientationActivity">
+            <!-- portrait : 화면 고정하는 코드 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity android:name="kr.co.partnersclub.MainActivity"
             android:windowSoftInputMode="adjustResize"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name=".MainActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
